@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3554 2022/01/14 16:24:20 taca Exp $
+# $NetBSD: Makefile,v 1.3555 2022/01/14 18:42:05 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -2717,7 +2717,6 @@ SUBDIR+=	py-wasm
 SUBDIR+=	py-wcwidth
 SUBDIR+=	py-wheel
 SUBDIR+=	py-whichcraft
-SUBDIR+=	py-windbg
 SUBDIR+=	py-wrapt
 SUBDIR+=	py-xbe
 SUBDIR+=	py-xdg
