@@ -1,3 +1,0 @@
-Winpdb is a platform independent Python debugger.  It supports multiple
-threads, namespace modification, embedded debugging and encrypted
-communication.
